新機能追加しました

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 
 <body>
     <h1>メインタイトル</h1>
-    <h1>編集中です
-        新機能追加予定です
+    
+    <button>ATM</button>
+    <h1>
+        新機能追加しましたです
     </h1>
     
 </body>
